--- a/public/shared/theme/almond_cake/css/style.css
+++ b/public/shared/theme/almond_cake/css/style.css
@@ -17,7 +17,7 @@
 	}	
 	
 	.container {
-		background-image: url( "../image/dawn_190053.jpg" );
+		background-image: url( "../../../../shared/image/background/dawn_190053.jpg" );
 		background-size: cover;
 		width: 100%;
 		height: 100%;
